--- a/Tangy_Business/Tangy_Business.csproj
+++ b/Tangy_Business/Tangy_Business.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tangy_DataAccess_1\Tangy_DataAccess_1.csproj" />
     <ProjectReference Include="..\Tangy_Models\Tangy_Models.csproj" />
   </ItemGroup>
 
