--- a/WebLucky_Serwer/WebLucky_Serwer.csproj
+++ b/WebLucky_Serwer/WebLucky_Serwer.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Tangy_Business\Tangy_Business.csproj" />
+    <ProjectReference Include="..\Tangy_Common\Tangy_Common.csproj" />
     <ProjectReference Include="..\Tangy_DataAccess_1\Tangy_DataAccess_1.csproj" />
     <ProjectReference Include="..\Tangy_Models\Tangy_Models.csproj" />
   </ItemGroup>
