--- a/WebLucky_Serwer/WebLucky_Serwer.csproj
+++ b/WebLucky_Serwer/WebLucky_Serwer.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MudBlazor" Version="6.19.1" />
+    <PackageReference Include="Syncfusion.Blazor.Grid" Version="25.1.35" />
     <PackageReference Include="Syncfusion.Blazor.RichTextEditor" Version="25.1.35" />
     <PackageReference Include="Syncfusion.Blazor.Themes" Version="25.1.35" />
   </ItemGroup>
