Client : Home Page In Action

--- a/WebLucky_Client/wwwroot/appsettings.json
+++ b/WebLucky_Client/wwwroot/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "BaseAPIUrl": "http://localhost:58522",
-  "BaseServerUrl": "http://localhost:17977"
+  "BaseAPIUrl": "https://localhost:44365",
+  "BaseServerUrl": "https://localhost:44347"
 }
