--- a/WebLucky_Serwer/appsettings.json
+++ b/WebLucky_Serwer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebLucky_Serwer;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
