--- a/WebLucky_API/appsettings.json
+++ b/WebLucky_API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "APISettings": {
+    "SecretKey": "\"251dK9_??UZ1Kt?3GMdy@fjvS7PO:}W(sw7aJa3,;lb~%+/<eeA$3e-V\"W)kF>X\",",
+    "ValidAudience": "https://localhost:44365/swagger/index.html",
+    "ValidIssuer": "https://localhost:44312"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
