Server : Order Details Component

--- a/WebLucky_Serwer/WebLucky_Serwer.csproj
+++ b/WebLucky_Serwer/WebLucky_Serwer.csproj
@@ -23,6 +23,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
+    <PackageReference Include="Radzen.Blazor" Version="4.30.3" />
     <PackageReference Include="Syncfusion.Blazor.Grid" Version="25.1.35" />
     <PackageReference Include="Syncfusion.Blazor.RichTextEditor" Version="25.1.35" />
     <PackageReference Include="Syncfusion.Blazor.Themes" Version="25.1.35" />
