--- a/Tangy_Business/Tangy_Business.csproj
+++ b/Tangy_Business/Tangy_Business.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Stripe.net" Version="44.3.0" />
   </ItemGroup>
 
   <ItemGroup>
