--- a/WebLucky_API/appsettings.json
+++ b/WebLucky_API/appsettings.json
@@ -5,7 +5,7 @@
   },
   "APISettings": {
     "SecretKey": "\"251dK9_??UZ1Kt?3GMdy@fjvS7PO:}W(sw7aJa3,;lb~%+/<eeA$3e-V\"W)kF>X\",",
-    "ValidAudience": "https://localhost:44365/swagger/index.html",
+    "ValidAudience": "https://localhost:44365",
     "ValidIssuer": "https://localhost:44312"
   },
   "Logging": {
