Blazor_Project_end

--- a/WebLucky_Client/wwwroot/appsettings.json
+++ b/WebLucky_Client/wwwroot/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "BaseAPIUrl": "https://localhost:44365",
-  "BaseServerUrl": "https://localhost:44347"
+  "BaseAPIUrl": "http://10.103.0.17/cs66/blazor/s08/BlazorAPI/swagger/index.html",
+  "BaseServerUrl": "http://10.103.0.17/cs66/blazor/s08/BlazorServer"
 }
