--- a/WebLucky_Serwer/appsettings.json
+++ b/WebLucky_Serwer/appsettings.json
@@ -8,8 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebLucky_Serwer;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "DetailedErrors": true,
+  "AllowedHosts": "*"
 }
