--- a/WebLucky_Serwer/WebLucky_Serwer.csproj
+++ b/WebLucky_Serwer/WebLucky_Serwer.csproj
@@ -36,4 +36,8 @@
     <ProjectReference Include="..\Tangy_Models\Tangy_Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\product\" />
+  </ItemGroup>
+
 </Project>
